# keyboard-keyboard

./: .gitignore
keyboard_keyboard/: README.md  keyboard_keyboaard.kicad_pcb
keyboard_keyboard/code/: .gitignore  Cargo.toml  Embed.toml  README.md
keyboard_keyboard/code/.cargo/: config.toml
keyboard_keyboard/code/.zed/: settings.json
keyboard_keyboard/code/src/: main.rs  midi_sender.rs
keyboard_keyboard/kicad/: keyboard_keyboard.kicad_pro
